--- a/src/app/booking-update/booking-update.component.html
+++ b/src/app/booking-update/booking-update.component.html
@@ -1,7 +1,39 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-6">
-      <div class="timepicker-container rounded shadow">
+    <div class="col-md-4">
+      <h2>Booking Search</h2>
+      <div class="form-group">
+        <label for="uniqueId">Unique ID:</label>
+        <input
+          type="text"
+          class="form-control"
+          id="uniqueId"
+          [(ngModel)]="uniqueId"
+        />
+      </div>
+      <button
+        class="custom-button"
+        (click)="searchBooking()"
+        [disabled]="uniqueId.length < 5"
+      >
+        Search
+      </button>
+      <div *ngIf="bookingFound">
+        <h3>Booking Details</h3>
+        <p>Date: {{ getFormattedDate(booking.startTime.toString()) }}</p>
+        <p>Start Time: {{ getFormattedTime(booking.startTime.toString()) }}</p>
+        <p>End Time: {{ getFormattedTime(booking.endTime.toString()) }}</p>
+        <p>Unique ID: {{ booking.uniqueId }}</p>
+        <button (click)="editBooking()" class="custom-button">Edit</button>
+        <button (click)="deleteBooking()" class="custom-button">Delete</button>
+      </div>
+      <div *ngIf="searchClicked && !bookingFound && uniqueId.length >= 5">
+        <p>No booking found.</p>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div *ngIf="editBookingYes" class="timepicker-container rounded shadow">
         <mat-form-field class="rounded">
           <mat-label>Choose a date</mat-label>
           <input
@@ -42,9 +74,11 @@
         </button>
       </div>
     </div>
-    <div class="col-md-6">
+
+    <div class="col-md-4">
       <div class="container">
         <app-booking-calendar
+          *ngIf="editBookingYes"
           [bookings]="bookingsForSelectedDay"
         ></app-booking-calendar>
       </div>
