--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.min.css";
 
 html,
 body {
   height: 100%;
 }
 body {
+  color: #ffffff;
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background: #212020;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 .bs-datepicker-container {
   background-color: #ffffff;
@@ -22,4 +26,20 @@ body {
   position: absolute;
   top: 100%;
   left: 0;
+}
+
+.form-control {
+  background-color: #ffffff;
+  color: rgb(31, 31, 31);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
