--- a/src/app/corporation-main-page/corporation-main-page.component.html
+++ b/src/app/corporation-main-page/corporation-main-page.component.html
@@ -1,6 +1,19 @@
 <div *ngIf="corporation">
   <div class="corporation-header">
     <h1>{{ corporation.name }}</h1>
+    <div>
+      <button class="custom-button" (click)="openTextField()">
+        Change name
+      </button>
+    </div>
+    <input
+      *ngIf="isTextFieldOpen"
+      type="text"
+      [(ngModel)]="corporation.name"
+      (keydown.enter)="changeName(corporation.name)"
+      (keyup.enter)="isTextFieldOpen = false"
+      autofocus
+    />
   </div>
 
   <app-conference-room
