--- a/src/app/all-corporations/all-corporations.component.css
+++ b/src/app/all-corporations/all-corporations.component.css
@@ -1,6 +1,9 @@
 .container {
-  width: 30%;
+  align-self: auto;
+  display: flex;
   padding-top: 10vh;
+  padding-left: 20%;
+  padding-right: 20%;
   border-radius: 5%;
 }
 
@@ -41,14 +44,14 @@
 }
 
 .corporation-button {
+  flex-direction: row;
   background-color: transparent;
   border: none;
   color: white;
   font-size: 24px;
   cursor: pointer;
-  margin-left: 20px;
-  margin-right: 20px;
-  padding: 5%;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .corporation-button:hover {
